--- a/css/style.css
+++ b/css/style.css
@@ -367,16 +367,29 @@ display: block;
 .footer{
     display: flex;
     justify-content: space-between;
-    padding: 97px 141px 95px 75px; 
+    padding: 97px 141px 0px 75px; 
     
 }
-.Case {
-    font-weight: 600;
+.Case1 {
+font-weight: 600;
 font-size: 40px;
 line-height: 50px;
 margin-bottom: 30px;
 }
-    
+.sp1{
+    margin-top: 39px;
+}
+.Riding{
+    margin-top: 11px;
+    font-weight: 400;
+font-size: 20px;
+line-height: 30px;
+}
+  .txt11{font-weight: 600;
+    font-size: 20px;
+    line-height: 25px;
+margin-top: 15px;
+}  
 
 .link10{
     
@@ -397,7 +410,31 @@ margin-top: 15px;
 font-size: 20px;
 line-height: 25px;
 }
+.line2{
+    /* width: 1000px; */
+    height: 1vh;
+    color: #000;
+    padding: 50px 141px 50px 75px; ;
+}
+.Localizatio{
+    
+margin-left: 10px;
+}
+.end{
+    padding: 0px 151px 50px 75px;
+    display: flex;
+    justify-content: space-between;
 
-   
+}
+.Localization1{
+    
+   font-weight: 400;
+font-size: 12px;
+line-height: 15px;
+}
+.rekv{
+    display: flex;
+}
+
 
     
