--- a/css/media.css
+++ b/css/media.css
@@ -17,6 +17,61 @@
     display: flex;
     margin-top: 5px;
 }
+.face{
+    display: none;
+}
+
+
+}
+
+
+
+
+@media screen and (max-width:320px){
+
+    .heder-link{
+        display: inline-block;
+    }
+   .img-logo{
+    display: none;
+   } 
+   .link-btn-1{
+    padding: 10px 15px;
+   }
+.link-btn-2{
+    padding: 10px 5px;
+}
+.link-1{
+    font-size: 35px;}
+ .menu{
+    justify-content: center;
+ }  
+ h1,.txt-1{
+    text-align: center;
+ } 
+ .control1,.control3{
+    flex-direction: column-reverse;
+ }
+ .txt3{
+    display: flex;
+    flex-direction: column-reverse;
+
+ }
+ .pictogr1{
+    width: 300px;
+ }
+ .control1,.control2,.control3,.control4{
+    padding: 20px;
+ }
+ h3,h4{
+    margin: 0px;
+ }
+ 
+    
+
+
+
+
 
 
 }
