--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ line-height: 60px;
 .logs-1{
     margin: 50px;
 }
-.control{
+.control1,.control2,.control3,.control4{
     padding: 100px 75px 250px 20px;
     display: flex;
     /* justify-content: space-between; */
