--- a/css/style.css
+++ b/css/style.css
@@ -397,8 +397,8 @@ font-size: 40px;
 line-height: 50px;
 margin-bottom: 30px;
 }
-.frame{
-    padding-right: 75px;
+.frame1{
+    padding-left: 75px;
 }
 
 
