--- a/css/media.css
+++ b/css/media.css
@@ -1,131 +1,203 @@
-@media screen and (max-width:768px){
-    .link-btn-1{
+@media screen and (max-width:768px) {
+    .link-btn-1 {
         /* display: inline-block; */
         display: block;
         margin-left: 0px;
-        
-       
-   
+
+
+
     }
-    .link-btn-2{
+
+    .link-btn-2 {
         display: inline-block;
     }
-  .menu{
-    justify-content: space-around;    
-}
-.btn{
-    display: flex;
-    margin-top: 5px;
-}
-.face{
-    display: none;
-}
-h3,h4{
-    margin-top: 0px;}
 
-.control1,.control3{
-flex-direction: column-reverse;
-}
-.control1,.control2,.control3,.control4{
-padding-bottom: 10px;}
-.man{
-    /* display: inline-block; */
-    align-items: center;
-}
-.line{
-    width: 0px;
-    height: 0px;
-    background: #000;
-    margin-left: 0px;
-}
-.nature{
-    display: none;
-}
-.link-btn6{
-    padding: 22px 10px; }
+    .menu {
+        justify-content: space-around;
+    }
+
+    .btn {
+        display: flex;
+        margin-top: 5px;
+    }
+
+    .face {
+        display: none;
+    }
+
+    h3,
+    h4 {
+        margin-top: 0px;
+    }
+
+    .control1,
+    .control3 {
+        flex-direction: column-reverse;
+    }
+
+    .control1,
+    .control2,
+    .control3,
+    .control4 {
+        padding-bottom: 10px;
+    }
+
+    .man {
+        /* display: inline-block; */
+        align-items: center;
+    }
+
+    .line {
+        width: 0px;
+        height: 0px;
+        background: #000;
+        margin-left: 0px;
+    }
+
+    .nature {
+        display: none;
+    }
+
+    .link-btn6 {
+        padding: 22px 10px;
+    }
 
     /* .pictos{
 display: flex;
 
     } */
 
-.footer1{
-    display: flex;
-   justify-content: space-around;
+    .footer1 {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .bg {
+        padding: 0, 30px, 0;
+    }
+
+    .logs-1 {
+        margin: 45px;
+    }
+
+    .pictos {
+        justify-content: center;
+    }
+
+    .most1 {
+
+        justify-content: center;
+    }
+
+    .link5 {
+        padding: 0px 5px;
+    }
+
+    .Integrate-txt {
+        text-align: center;
+    }
+
+    .footer {
+        padding: none;
+    }
+
+    .support{
+        margin-left: 20px;
+    }
+
+
+
+
 }
 
 
 
 
+@media screen and (max-width:320px) {
 
-
-}
-
-
-
-
-@media screen and (max-width:320px){
-
-    .heder-link{
+    .heder-link {
         display: inline-block;
     }
-   .img-logo{
-    display: none;
-   } 
-   .link-btn-1{
-    padding: 10px 15px;
-   }
-.link-btn-2{
-    padding: 10px 5px;
-}
-.link-1{
-    font-size: 35px;}
- .menu{
-    justify-content: center;
- }  
- h1,.txt-1{
-    text-align: center;
- } 
- .control1,.control3{
-    flex-direction: column-reverse;
- }
- .txt3{
-    display: flex;
-    flex-direction: column-reverse;
 
- }
- .pictogr1{
-    width: 300px;
- }
- .control1,.control2,.control3,.control4{
-    padding: 10px;
- }
- h3,h4{
-    margin: 0px;
- }
- .man{
-    /* display: inline-block; */
-    align-items: center;
-}
-.line{
-    width: 0px;
-    height: 0px;
-    background: #000;
-    margin-left: 0px;
-}
-.nature{
-    display: none;
-}
-.Integrate1{
-    padding: 20px 0px 20px 0px;
-    align-items: center;
-}
-/* .Integrate-txt{
+    .img-logo {
+        display: none;
+    }
+
+    .link-btn-1 {
+        padding: 10px 15px;
+    }
+
+    .link-btn-2 {
+        padding: 10px 5px;
+    }
+
+    .link-1 {
+        font-size: 35px;
+    }
+
+    .menu {
+        justify-content: center;
+    }
+
+    h1,
+    .txt-1 {
+        text-align: center;
+    }
+
+    .control1,
+    .control3 {
+        flex-direction: column-reverse;
+    }
+
+    .txt3 {
+        display: flex;
+        flex-direction: column-reverse;
+
+    }
+
+    .pictogr1 {
+        width: 300px;
+    }
+
+    .control1,
+    .control2,
+    .control3,
+    .control4 {
+        padding: 10px;
+    }
+
+    h3,
+    h4 {
+        margin: 0px;
+    }
+
+    .man {
+        /* display: inline-block; */
+        align-items: center;
+    }
+
+    .line {
+        width: 0px;
+        height: 0px;
+        background: #000;
+        margin-left: 0px;
+    }
+
+    .nature {
+        display: none;
+    }
+
+    .Integrate1 {
+        padding: 20px 0px 20px 0px;
+        align-items: center;
+    }
+
+    /* .Integrate-txt{
     text-align: center;
 } */
 
- 
-    
+
+
 
 
 
