--- a/css/media.css
+++ b/css/media.css
@@ -144,8 +144,7 @@ display: flex;
         text-align: center;
     }
 
-    .control1,
-    .control3 {
+    .control1,.control4 {
         flex-direction: column-reverse;
     }
 
@@ -159,13 +158,18 @@ display: flex;
         width: 300px;
     }
 
-    .control1,
-    .control2,
-    .control3,
-    .control4 {
-        padding: 10px;
+    .control1,.control2,.control3,.control4 {
+        justify-content: center;
     }
-
+.txt-3,.txt-4{
+    flex:none
+}
+.txt-4{
+    justify-content: center;
+}
+.txt4{
+    margin-left: 20px;
+}
     h3,
     h4 {
         margin: 0px;
@@ -192,13 +196,31 @@ display: flex;
         align-items: center;
     }
 
-    /* .Integrate-txt{
-    text-align: center;
-} */
+    .aside{
+        padding: 0px;
+       
+    }
+    /* .accelerate{
+        justify-content: center;
+        
+    } */
+    .star{
+        flex-wrap: wrap;
+    }
+.star2{
+    display: block;
+    margin: 10px 0px;
+}
+.Lokalise{
+    flex-wrap: wrap;
+    padding: 0;
+    flex-direction: column-reverse;
 
 
-
-
+}
+.man{
+    margin: 0;
+}
 
 
 
