--- a/css/media.css
+++ b/css/media.css
@@ -102,8 +102,18 @@ display: flex;
     }
 
     .support{
-        margin-left: 20px;
+       margin: 0;
     }
+    .company{
+        margin-right: 10px;
+    }
+    .Localization{
+        padding: 0px
+    }
+    .legal{
+        margin-left: 50px;
+    }
+        
 
 
 
@@ -150,7 +160,7 @@ display: flex;
 
     .txt3 {
         display: flex;
-        flex-direction: column-reverse;
+        flex-wrap: wrap-reverse;
 
     }
 
@@ -227,9 +237,9 @@ display: flex;
 
 .Localization{
     padding: 0px
-    
-    
 }
+    
+
 .Integrate-txt{
     font-size: 50px;
 }
@@ -248,6 +258,12 @@ flex-direction: column;
 .txt-5{
     margin: 0;
 }
-
+.most-txt{
+    margin-left: 0px;
+}
+.company,.legal{
+    margin: 0;
+    margin-top: 10px;
+}
 
 }
