--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 @import 'variable';
+@import 'mixins';
 *,body,html{
     margin: 0;
     padding: 0;
@@ -8,3 +9,4 @@
     border: none;
     outline: none;
 }
+
