--- a/css/style.scss
+++ b/css/style.scss
@@ -11,19 +11,63 @@
     outline: none;
 }
 .header-section{
-    padding: 50px 150px 110px 145px;
+    padding: 50px 157px 110px 145px;
+    background:url(../image/Mask\ Group.png) no-repeat left 50%;
+    background:url(../image/image.png) no-repeat right 50%;
+    // background: 50%,#000;
 }
 .container{
     width: 1153px;
+    // @include fb();
+margin: auto;}
+
+header{
+@include fb();
+}
+    
 .logo{
     display: flex;
     align-items: center;
     
-}
+
+
 .link-logo{
     margin-left: 11px;
     margin-top: 10px;
     @include font(24px,red,700,$font-josefin);
+    display: block;
 }
 
 }
+.menu{
+@include fc();
+
+
+   
+
+    .menu-item{
+        display: inline-block;
+        margin: 0 25px;
+        // margin-bottom: 25px;
+
+    @include font (18px,$wh,700,$font-open)
+    }
+    .menu-item-aktive{
+        display: inline-block;
+        margin: 0 25px;
+
+    @include font (18px,$red,700,$font-open)
+    }
+    }
+    .picto{
+        display: flex;
+    align-items: center;
+    margin-right: 60px;
+    .picto1{
+        margin: 0 20px;
+    }
+    }
+    
+
+    
+
