--- a/css/style.scss
+++ b/css/style.scss
@@ -12,8 +12,8 @@
 }
 .header-section{
     padding: 50px 157px 110px 145px;
-    background:url(../image/Mask\ Group.png) no-repeat left 50%;
-    background:url(../image/image.png) no-repeat right 50%;
+   background: url(../image/Mask.png) no-repeat left/50%,#000;
+    background: url(../image/image.png)no-repeat right/50%;
     // background: 50%,#000;
 }
 .container{
