--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@
 
 .header-section {
   padding: 50px 157px 110px 145px;
-  background: url(../image/Mask\ Group.png) no-repeat left 50%;
-  background: url(../image/image.png) no-repeat right 50%;
+  background: url(../image/Mask.png) no-repeat left/50%, #000;
+  background: url(../image/image.png) no-repeat right/50%;
 }
 
 .container {
