--- a/css/style.css
+++ b/css/style.css
@@ -136,4 +136,47 @@ h1 {
   font-weight: 400;
   font-family: "Open Sans", sans-serif;
   margin-top: 20px;
+}
+
+.img1 {
+  margin-top: 60px;
+}
+.img1 .png {
+  display: block;
+}
+.img1 .prace-1 {
+  margin-top: 35px;
+}
+.img1 .prace-1 .prace-txt {
+  font-size: 24px;
+  color: #0D0402;
+  font-weight: 700;
+  font-family: "Josefin Sans", sans-serif;
+}
+.img1 .prace-1 .sort {
+  margin-top: 10px;
+  font-size: 32px;
+  color: #0D0402;
+  font-weight: 600;
+  font-family: "Josefin Sans", sans-serif;
+}
+.img1 .prace-1 .txt-1 {
+  margin-top: 15px;
+  font-size: 16px;
+  color: #0D0402;
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+}
+.img1 .cart-btn {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+}
+.img1 .btn-link1 {
+  padding: 15px 30px;
+  font-size: 18px;
+  color: #FFFFFF;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+  display: block;
 }/*# sourceMappingURL=style.css.map */
