--- a/css/style.scss
+++ b/css/style.scss
@@ -56,10 +56,10 @@ header {
 
 
 .menu-item-active,
-.menu-item,
+.menu-item
 {
 display: inline-block;
-margin: 0 25px;
+margin: 0 25px;}
 
 // margin-bottom: 25px;
 .menu-link {
@@ -76,7 +76,7 @@ margin: 0 25px;
 
     @include font (18px, $red, 700, $font-open)
 }
-}
+
 
 .picto {
     display: inline-block;
@@ -134,16 +134,25 @@ h1 {
     @include font(18px, $bg, 400, $font-open);
     margin-top: 20px;
 }
+.content{
+    // @include fb();
+}
 
 .img1 {
     margin-top: 60px;
+// width: 310px;
+@include fa();
+
+}
+
+    
 
     .png {
         display: block;
     }
 
     .prace-1 {
-        margin-top: 35px;
+        margin-top: 35px;}
 
         .prace-txt {
             @include font(24px, $bg, 700, $font-josefin);
@@ -159,12 +168,12 @@ h1 {
             @include font(16px, $bg, 400, $font-open);
 
         }
-    }
+    
 
     .cart-btn {
         display: flex;
         flex-wrap: wrap;
-        justify-content: start;
+        // justify-content: start;
         margin-top: 30px;
     }
 
@@ -172,21 +181,21 @@ h1 {
 
         background: $red;
         width: 148px;
-        // padding:5px, 30px, 15px, 30px;
+        // padding:15px, 30px, 15px, 30px;
         margin-left: 20px;
         border-radius: 5px;
-        text-align: center;
+        // text-align: center;
 
     }
 
 
 
     .btn-link2 {
-        @include font(18px, $wh, 600, $font-open);
-
-        padding: 15px, 30px;
+    @include font(18px, $wh, 600, $font-open);
+    display: block;
+    padding: 15px 30px;
     }
-}
+
 
 .number {
     display: inline-block;
@@ -228,12 +237,12 @@ h1 {
 
 .number-minus:hover,
 .number-plus:hover {
-    background: $wf;
+    background: $wh;
 }
 
 .number-minus:active,
 .number-plus:active {
-    background: $wf;
+    background: $wh;
 }
 
 .number-text {
@@ -259,5 +268,5 @@ h1 {
     font-size: 13px;
     color: #000;
     line-height: 55px;
-    height: 55px
+    height: 55px;
 }
