--- a/css/style.scss
+++ b/css/style.scss
@@ -135,13 +135,13 @@ h1 {
     margin-top: 20px;
 }
 .content{
-    // @include fb();
-}
+    @include fa();
+margin-top: 60px;}
 
-.img1 {
-    margin-top: 60px;
+.img3 {
+    margin-top: 5px;
 // width: 310px;
-@include fa();
+
 
 }
 
@@ -191,9 +191,9 @@ h1 {
 
 
     .btn-link2 {
-    @include font(18px, $wh, 600, $font-open);
+    @include font(18px, $wh, 700, $font-josefin);
     display: block;
-    padding: 15px 30px;
+    padding: 20px 20px;
     }
 
 
@@ -203,9 +203,9 @@ h1 {
     position: relative;
     text-align: left;
     padding: 0;
-    width: 130px;
+    width: 114px;
     border: 1px solid #000;
-    height: 55px;
+    height: 57px;
 }
 
 .number-controls {
@@ -252,12 +252,13 @@ h1 {
     width: 33px;
     height: 55px;
     line-height: 55px;
-    @include font(24px, #000, 500, );
+    @include font(24px, #000, 500, roboto);
     font-family: roboto;
+    
 
     // font-size: 14px;
-    // color: #000;
-    // background: #fff;
+    color: #000;
+    background: #fff;
     outline: none;
     border: none;
     text-align: right;
